--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,17 +1,31 @@
 on:
   issue_comment:
+    types: [created]
 
-permissions: {}
+permissions:
+  pull-requests: write
+  deployments: write
+  contents: write
+  checks: read
+  statuses: read
 
 jobs:
   test:
+    if: ${{ github.event.issue.pull_request }} # only run on pull request comments
     runs-on: ubuntu-latest
     steps:
     - name: check gates
       id: branch-deploy
       uses: github/branch-deploy@v11.1.2
+      with:
+        trigger: ".test"
+
+    # Checkout your project's repository based on the commit SHA provided by the branch-deploy step
+    # It is important to only ever operate on the commit SHA (where possible) as commit SHA's are immutable and you know exactly what you are deploying
+    - uses: actions/checkout@v6
+      with:
+        ref: ${{ steps.branch-deploy.outputs.sha }}
       
-    - name: print title
-      env:
-        TITLE: ${{ github.event.issue.title }}
-      run: echo "$TITLE"
+    - name: fake deploy
+      if: ${{ steps.branch-deploy.outputs.continue == 'true' }}
+      run: echo "I am doing a fake deploy"
