Change trigger from pull_request_comment to issue_comment
Updated workflow to trigger on issue comments instead of pull request comments.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,5 +1,5 @@
 on:
-  pull_request_comment:
+  issue_comment:
     types: [created]
 
 permissions:
@@ -11,7 +11,7 @@ permissions:
 
 jobs:
   test:
-    if: ${{ github.event.issue.pull_request }} # only run on pull request comments
+    # if: ${{ github.event.issue.pull_request }} # only run on pull request comments
     runs-on: ubuntu-latest
     steps:
     - name: check gates
