--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,10 +22,10 @@ jobs:
 
     # Checkout your project's repository based on the commit SHA provided by the branch-deploy step
     # It is important to only ever operate on the commit SHA (where possible) as commit SHA's are immutable and you know exactly what you are deploying
-    - uses: actions/checkout@v6
-      with:
-        ref: ${{ steps.branch-deploy.outputs.sha }}
+    #- uses: actions/checkout@v6
+    #  with:
+    #    ref: ${{ steps.branch-deploy.outputs.sha }}
       
-    - name: fake deploy
-      if: ${{ steps.branch-deploy.outputs.continue == 'true' }}
-      run: echo "I am doing a fake deploy"
+    #- name: fake deploy
+    #  if: ${{ steps.branch-deploy.outputs.continue == 'true' }}
+    #  run: echo "I am doing a fake deploy"
