--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,10 +15,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: check gates
-      id: branch-deploy
+      # id: branch-deploy
       uses: jarlob/branch-deploy@gate
-      with:
-        trigger: ".test"
+      # with:
+      #  trigger: ".test"
 
     # Checkout your project's repository based on the commit SHA provided by the branch-deploy step
     # It is important to only ever operate on the commit SHA (where possible) as commit SHA's are immutable and you know exactly what you are deploying
