--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,12 +2,12 @@ on:
   issue_comment:
     types: [created]
 
-permissions:
-  pull-requests: write
-  deployments: write
-  contents: write
-  checks: read
-  statuses: read
+permissions: {}
+#  pull-requests: write
+#  deployments: write
+#  contents: write
+#  checks: read
+#  statuses: read
 
 jobs:
   test:
